--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 body {
 text-align: center;
-background-image: linear-gradient(to bottom, rgb(238, 255, 0), rgb(168, 168, 18));
+background-image: linear-gradient(to top, rgb(56, 56, 56), rgb(0, 0, 0));
 height: 100vh;
 margin: auto;
 overflow: hidden
@@ -28,39 +28,45 @@ top: -25px;
 position: fixed;
 left: 15px;
 font-family:"Prompt", sans-serif;
-color: rgb(19, 18, 6);
-
-
+color: rgb(255, 208, 0);
 }
 
+ @media (max-width: 800px) {
 h2 {
-    color: black;
+color: rgb(145, 64, 64);
+}
+
+} 
+
+
+h2 {
+  color: rgb(241, 241, 241);
 position: relative;
 font-family:"prompt",arial;
 top: 158px;
 right: 102px;
-border-radius: 15px;
 margin: auto;
 padding: 10px;
+
 }
 
 
 .corvete {
 position: absolute;
-top: 40%;
-transform: translateY(-15%);
-transform: translateX(-49%);
+top: 43%;
+transform: translateX(-50%);
 animation-duration: 3s;
 width: 100%;
 max-width: 650px;
 min-width: 290px;
+
 }
 
 main {
     position: relative;
-    color: rgb(0, 0, 0);
+    color: rgb(196, 196, 196);
 font-family:"prompt";
-font-weight: 300;
+font-weight: 200;
 right: 110px;
 top: 110px;
 
@@ -79,14 +85,14 @@ border-radius: 100px;
 }
 
 .video:hover{
-background-color: rgb(126, 126, 126);
+background-color: rgb(238, 70, 70);
 }
 
 .inf {
     position: absolute;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-decoration: none;
-    color: rgb(41, 39, 11); /* Cor do texto */
+    color: rgb(0, 0, 0); /* Cor do texto */
     border: none; /* Sem borda */
     padding: 10px 10px; /* Espaçamento interno */
     font-size: 16px; /* Tamanho do texto */
@@ -105,8 +111,8 @@ background-color: rgb(126, 126, 126);
 }
 
 .inf:hover {
-background-color: rgb(216, 216, 216);
-
+background-color: rgb(37, 37, 37);
+color: rgb(255, 252, 252);
 }
 
  h4 {
